# bible-telegram-bot

./: CHANGELOG.md  Makefile  pyproject.toml
bible_telegram_bot/: app.py  handlers.py  registry.py
tests/: test_integration_get_versicle.py
